<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/history"
            android:icon="@drawable/history"
            android:title="@string/history"
            android:iconTint="@color/blue"
            tools:targetApi="o" />

        <item
            android:id="@+id/preferred_location"
            android:icon="@drawable/favorite"
            android:title="@string/preferred_location"
            android:iconTint="@color/pink"
            tools:targetApi="o" />

        <item android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/about"/>
    </group>

</menu>