<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AplicationAboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:src="@drawable/hfnu"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_icon"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/primary_text"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:text="@string/version"/>

    <LinearLayout
        android:layout_below="@+id/version"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:alpha="0.3"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/author"
            android:textSize="15sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:alpha="0.3"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/author_grade"
            android:textSize="15sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:alpha="0.3"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/author_qq"
            android:textSize="15sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:alpha="0.3"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/author_email"
            android:textSize="15sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:alpha="0.3"
            android:background="#000" />

    </LinearLayout>

</RelativeLayout>