<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/starting_place"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:visibility="gone"
        android:text="@string/starting_place"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615"
        android:layout_marginLeft="52dp" />


    <EditText
        android:id="@+id/input_starting_place"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:padding="10dp"
        android:background="@drawable/rounded_border"
        android:hint="@string/search_point_location"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/starting_place"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="28dp"
        android:layout_marginLeft="8dp"
        android:inputType="none"
        android:singleLine="true" />

    <TextView
        android:id="@+id/my_location"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/my_location"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/input_starting_place"
        app:layout_constraintStart_toStartOf="@+id/input_starting_place"
        app:layout_constraintTop_toTopOf="@+id/input_starting_place"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="5dp" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/select_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_starting_place"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/destination"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/destination"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/input_destination"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_border"
            android:inputType="none"
            android:padding="10dp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/destination"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,MissingConstraints" />

        <Button
            android:id="@+id/button_cancle"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/curved_border"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/cancle"
            android:textColor="@color/icons"
            app:layout_constraintEnd_toStartOf="@+id/button_navigation"
            app:layout_constraintHorizontal_bias="0.569"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_destination"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_navigation"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/curved_border"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/navigation"
            android:textColor="@color/icons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_destination"
            tools:targetApi="lollipop" />

    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>